--- a/clint/src/component/Card/Card.css
+++ b/clint/src/component/Card/Card.css
@@ -1,3 +1,15 @@
 .comment>button {
     display: none;
 }
+
+.comment-reply>form {
+    width: 100%;
+}
+
+.comment-reply>form>input {
+    width: 100%;
+}
+
+.comment-reply>form>button {
+    display: none;
+}
