--- a/clint/src/component/Header/_common.scss
+++ b/clint/src/component/Header/_common.scss
@@ -803,7 +803,7 @@ section {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  background-image: url(./../static/img/footer_background.png);
+//  background-image: url(./../static/img/footer_background.png);
 }
 .footer_content {
   padding-bottom: 53px;
