--- a/clint/src/assests/index.css
+++ b/clint/src/assests/index.css
@@ -27,6 +27,7 @@ label {
   height: 55px;
   width: 100%;
   box-shadow: 0px 2px 10px rgba(29, 34, 47, 0.15);
+  margin-top: 100px;
 }
 
 .search-div {
